# graphstorm

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  docker_launch.sh  graphstorm_job.sh  requirements.txt  run-arxiv.sh  run-papers100m.sh  run-test.sh  setup.py  submitJob.py
graphstorm-lightning/: .gitignore  README.md  pyproject.toml
graphstorm-lightning/examples/: README.md  node_gnn.ipynb
graphstorm-lightning/graphstorm_lightning/: __init__.py  utils.py
graphstorm-lightning/graphstorm_lightning/datamodule/: __init__.py  node_gnn.py
graphstorm-lightning/graphstorm_lightning/module/: __init__.py  node_gnn.py
graphstorm-processing/: .gitignore  .pre-commit-config.yaml  DEVELOPER.md  README.md  docker-entry.sh  mypy.ini  pyproject.toml
graphstorm-processing/docker/: README.md  build_gsprocessing_image.sh  push_gsprocessing_image.sh
graphstorm-processing/docker/0.1.0/: Dockerfile.cpu
graphstorm-processing/docker/0.1.0/emr/: Dockerfile.cpu  emr_bootstrap.sh
graphstorm-processing/docker/0.1.0/sagemaker/: Dockerfile.cpu
graphstorm-processing/docker/0.2.1/emr-serverless/: Dockerfile.cpu
graphstorm-processing/docker/0.2.1/sagemaker/: Dockerfile.cpu
graphstorm-processing/docker/0.2.2/emr-serverless/: Dockerfile.cpu
graphstorm-processing/docker/0.2.2/sagemaker/: Dockerfile.cpu
graphstorm-processing/docker/0.3.0/emr/: Dockerfile.cpu
graphstorm-processing/docker/0.3.0/emr-serverless/: Dockerfile.cpu
graphstorm-processing/docker/0.3.0/sagemaker/: Dockerfile.cpu
graphstorm-processing/docker/0.3.1/emr/: Dockerfile.cpu
graphstorm-processing/docker/0.4.0/: requirements.txt
graphstorm-processing/docker/0.4.0/emr/: Dockerfile.cpu
graphstorm-processing/docker/0.4.0/emr-serverless/: Dockerfile.cpu
graphstorm-processing/docker/0.4.0/sagemaker/: Dockerfile.cpu
graphstorm-processing/docker/0.4.1/: requirements.txt
graphstorm-processing/docker/0.4.1/emr/: Dockerfile.cpu
graphstorm-processing/docker/0.4.1/emr-serverless/: Dockerfile.cpu
graphstorm-processing/docker/0.4.1/sagemaker/: Dockerfile.cpu
graphstorm-processing/docker/0.4.2/: requirements.txt
graphstorm-processing/docker/0.4.2/emr-serverless/: Dockerfile.cpu
graphstorm-processing/docker/0.4.2/sagemaker/: Dockerfile.cpu
graphstorm-processing/docker/0.4/emr-serverless/: Dockerfile.cpu
graphstorm-processing/docker/0.5.0/: requirements.txt
graphstorm-processing/docker/0.5.0/emr-serverless/: Dockerfile.cpu
graphstorm-processing/docker/0.5.1/: requirements.txt
graphstorm-processing/docker/0.5.1/emr/: Dockerfile.cpu
graphstorm-processing/docker/0.5.1/emr-serverless/: Dockerfile.cpu
graphstorm-processing/docker/0.5.1/sagemaker/: log4j.properties
graphstorm-processing/docs/source/: conf.py  index.rst
graphstorm-processing/docs/source/developer/: developer-guide.rst  input-configuration.rst
graphstorm-processing/docs/source/usage/: amazon-sagemaker.rst  distributed-processing-setup.rst  example.rst
graphstorm-processing/graphstorm_processing/: constants.py  distributed_executor.py  repartition_files.py
graphstorm-processing/graphstorm_processing/config/: bert_configs.py  categorical_configs.py  config_parser.py  data_config_base.py  feature_config_base.py  hard_negative_configs.py  hf_configs.py  label_config_base.py  numerical_configs.py
graphstorm-processing/graphstorm_processing/config/config_conversion/: __init__.py  converter_base.py  gconstruct_converter.py  meta_configuration.py
graphstorm-processing/graphstorm_processing/data_transformations/: __init__.py  dist_feature_transformer.py  dist_label_loader.py  s3_utils.py  spark_utils.py
graphstorm-processing/graphstorm_processing/data_transformations/dist_transformations/: __init__.py  base_dist_transformation.py  dist_bert_transformation.py  dist_bucket_numerical_transformation.py  dist_category_transformation.py  dist_hard_negative_transformation.py  dist_hf_transformation.py  dist_label_transformation.py  dist_noop_transformation.py  dist_numerical_transformation.py  dist_rankgauss_numerical_transformation.py
graphstorm-processing/graphstorm_processing/graph_loaders/: dist_heterogeneous_loader.py  heterogeneous_graphloader.py  loader_base.py  row_count_utils.py  schema_utils.py
graphstorm-processing/scripts/: convert_gconstruct_config.py  run_distributed_processing.py  run_repartitioning.py  script_utils.py  submit_gsp_emr_step.py
graphstorm-processing/tests/: conftest.py  test_converter.py  test_dist_bucket_transformation.py  test_dist_category_transformation.py  test_dist_executor.py  test_dist_feature_transformer.py  test_dist_hard_negative_transformation.py  test_dist_heterogenous_loader.py  test_dist_huggingface_transformation.py  test_dist_label_loader.py  test_dist_noop_transformation.py  test_dist_numerical_transformation.py  test_dist_rankgauss_transformation.py  test_gsprocessing_config.py  test_repartition_files.py  test_row_count_utils.py  test_s3_utils.py
graphstorm-processing/tests/resources/multi_num_numerical/: multi_num.csv
graphstorm-processing/tests/resources/precomputed_transformations/: user_state_categorical_transformation.json
graphstorm-processing/tests/resources/repartitioning/: partitioned_metadata.json
tests/: README
(+1003 files in other folders)
