[tool.poetry]
name = "graphstorm_lightning"
version = "0.0.1"
description = "PyTorch Lightning support for GraphStorm"
readme = "README.md"
packages = [{include = "graphstorm_lightning"}]
authors = [
    "Amazon AI Graph ML team"
]

[tool.poetry.dependencies]
python = ">=3.8"
pytorch-lightning = ">=2.2.1"
graphstorm = "*"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
mock = ">=5.0.2"
coverage = ">=7.0.0"
sphinx = ">=6.0.0"
mypy = ">=1.0.0"
types-psutil = "^5.9.5.15"
black = ">=24.2.0"
pre-commit = "^3.3.3"
types-mock = "^5.1.0.1"
pylint = "~2.17.5"
jupyter = "*"
ipykernel = "*"
torch = "==2.1.0"
dgl = {url="https://data.dgl.ai/wheels/cu121/dgl-2.1.0%2Bcu121-cp310-cp310-manylinux1_x86_64.whl"}
dglgo = "*"

[project]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX",
]

[tool.mypy]
check_untyped_defs = true

[tool.pytest]
filterwarnings = "ignore::DeprecationWarning"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']

[virtualenvs]
in-project = true
