[tool.poetry]
name = "graphstorm_processing"
version = "0.2.1"
description = "Distributed graph pre-processing for GraphStorm"
readme = "README.md"
packages = [{include = "graphstorm_processing"}]
authors = [
    "Amazon AI Graph ML team"
]

[tool.poetry.dependencies]
python = "~3.9.12"
pyspark = ">=3.3.0, < 3.5.0"
pyarrow = "~13.0.0"
spacy = "3.6.0"
boto3 = "~1.28.1"
joblib = "^1.3.1"
pandas = "^1.3.5"
psutil = "^5.9.5"
sagemaker = "^2.83.0"
scipy = "^1.10.1"
transformers = "^4.37.1"
setuptools = "59.6.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
mock = ">=5.0.2"
en-core-web-lg = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.6.0/en_core_web_lg-3.6.0-py3-none-any.whl"}
coverage = ">=7.0.0"
sphinx = ">=6.0.0"
mypy = ">=1.0.0"
types-psutil = "^5.9.5.15"
black = "~23.7.0"
pre-commit = "^3.3.3"
types-mock = "^5.1.0.1"
pylint = "~2.17.5"

[project]
requires-python = ">=3.9" # TODO: Do we need a tilde here?
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX",
]


[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']
# Regexp: only include .py files under graphstorm_processing, tests, scripts
include = 'graphstorm_processing\/.*\.pyi?$|tests\/.*\.pyi?$|scripts\/.*\.pyi?$'

[tool.poetry.scripts]
gs-processing = "graphstorm_processing.distributed_executor:main"
gs-repartition = "graphstorm_processing.repartition_files:main"
