[tool.poetry]
name = "graphstorm_processing"
version = "0.3.1"
description = "Distributed graph pre-processing for GraphStorm"
readme = "README.md"
packages = [{include = "graphstorm_processing"}]
authors = [
    "Amazon AI Graph ML team"
]

[tool.poetry.dependencies]
python = "~3.9.12"
pyspark = ">=3.3.0, < 3.6.0"
pyarrow = "~14.0.1"
boto3 = "~1.28.1"
joblib = "^1.3.1"
pandas = "^1.3.5"
psutil = "^5.9.5"
sagemaker = "^2.83.0"
scipy = "^1.10.1"
transformers = "^4.37.1"
torch = [
    { url = "https://download.pytorch.org/whl/cpu/torch-2.1.2%2Bcpu-cp39-cp39-linux_x86_64.whl", markers = "sys_platform == 'linux' and platform_machine != 'aarch64'"},
    { url = "https://download.pytorch.org/whl/cpu/torch-2.1.2%2Bcpu-cp39-cp39-linux_x86_64.whl", markers = "sys_platform == 'darwin' and platform_machine != 'arm64'"},
    { url = "https://download.pytorch.org/whl/cpu/torch-2.1.2-cp39-none-macosx_11_0_arm64.whl", markers = "sys_platform == 'darwin' and platform_machine == 'arm64'"},
    { url = "https://download.pytorch.org/whl/cpu/torch-2.1.2-cp39-cp39-manylinux_2_17_aarch64.manylinux2014_aarch64.whl", markers = "sys_platform == 'linux' and platform_machine == 'aarch64'"},
]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
mock = ">=5.0.2"
coverage = ">=7.0.0"
sphinx = ">=6.0.0"
mypy = ">=1.0.0"
types-psutil = "^5.9.5.15"
black = "~24.2.0"
pre-commit = "^3.3.3"
types-mock = "^5.1.0.1"
pylint = "~2.17.5"
diff-cover = "^9.0.0"

[project]
requires-python = ">=3.9" # TODO: Do we need a tilde here?
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX",
]


[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']
# Regexp: only include .py files under graphstorm_processing, tests, scripts
include = 'graphstorm_processing\/.*\.pyi?$|tests\/.*\.pyi?$|scripts\/.*\.pyi?$'

[tool.poetry.scripts]
gs-processing = "graphstorm_processing.distributed_executor:main"
gs-repartition = "graphstorm_processing.repartition_files:main"
